--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div>
 		<h1>The Daily News</h1>
 		<h2><em>Messi Dedicates Trophy to <span style="color:red;">Maradona and Argentines</span> Fighting Covid</em></h2>
-		<h3><em>Sports Reporter, Maracana<em></h3>
+		<h3><em>Sports Reporter, Maracana</em></h3>
 		<img src="images/messi.jpg">
 		<p><strong><span style="font-size: 48px;">L</span>ionel Messi</strong> said Sunday that he hoped Argentina's <mark style="background: #06efad7a; color: #3e3d3d;">Copa America</mark> triumph would help provide strength to his fan in their battle to overcome the Covid-19 pandemic. The message, posted on social media, came less than a day after the Albiceleste beat Brazil 1-0 in the Copa America final at Rio de Janeiro's Maracana stadium, ending Argentina's 28-year wait for a major trophy.<p>
 
